--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,7 +9,7 @@
 <body>
   <nav>
     <a href="/">Search for Cities</a>
-    <a href="/favorites">Favorite Cities</a>
+    <a href="/cities/faves">Favorite Cities</a>
     <a href="/travelers">Travelers</a>
   </nav>
   <main>
