--- a/views/cities/faves.ejs
+++ b/views/cities/faves.ejs
@@ -1,2 +1,18 @@
 <h1>You like some dumb cities, man 🤦‍♂️</h1>
 
+<ul>
+	<% faves.forEach((f) => { %>
+		<li><%= f.name %>, <%= f.state %></li>
+	<% }) %>
+</ul>
+
+<div id='map' style='width: 100%; height: 35em;'></div>
+<script>
+	mapboxgl.accessToken = '<%= mapkey %>'
+	let map = new mapboxgl.Map({
+		container: 'map',
+		style: 'mapbox://styles/mapbox/dark-v10',
+		center: [-96, 40.8],
+		zoom: 3
+	})
+</script>
